config/yba-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: root-ca
  name: yba
spec:
  tls:
  - hosts:
      - yba.$PROJECT_DOMAIN
      - yba-prom.$PROJECT_DOMAIN
    secretName: yba-tls
  ingressClassName: nginx
  rules:
  - host: yba.$PROJECT_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: yba-yugaware-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: yba-prom.$PROJECT_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: yba-yugaware-ui
            port:
              number: 9090
        path: /
        pathType: Prefix
